--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "DeepHire",
-  "short_name": "DeepHire",
+  "name": "Jurbly",
+  "short_name": "Jurbly",
   "display": "standalone",
   "start_url": "./?utm_source=homescreen",
   "theme_color": "#002140",
